--- a/index.html
+++ b/index.html
@@ -4,6 +4,173 @@
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>Portfolio</title>
+
+        <link
+            rel="stylesheet"
+            href="https://cdnjs.cloudflare.com/ajax/libs/odometer.js/0.4.7/themes/odometer-theme-minimal.min.css"
+            integrity="sha512-Jeqp8CoPCvf9tf/uWokfCTsFcv5BIhfTYaTTJA0NKn6B88zDSWe5d/9HTmZX63FGpGGQdB8Chg2khB96+wn4Tw=="
+            crossorigin="anonymous"
+            referrerpolicy="no-referrer"
+        />
+        <link
+            rel="stylesheet"
+            href="https://cdn.lineicons.com/4.0/lineicons.css"
+        />
+        <link rel="stylesheet" href="style.css" />
     </head>
-    <body></body>
+    <body>
+        <!-- HERO SECTION START -->
+
+        <section id="hero">
+            <nav class="topNav">
+                <!-- nav attatched to hero -->
+
+                <div class="logoEmail">
+                    <div class="navLogo">
+                        <a href="#"><img src="images/logo.png" alt="" /></a>
+                    </div>
+                    <div class="navEmail">
+                        <a href="mailto:dev.alarafat@gmail.com"
+                            >dev.alarafat@gmail.com</a
+                        >
+                    </div>
+                </div>
+                <div class="menuButtons">
+                    <div class="navMenu">
+                        <ul>
+                            <li class="navMenuLi">
+                                <a href="#">Services</a>
+                            </li>
+                            <li class="navMenuLi">
+                                <a href="#">Works</a>
+                            </li>
+                            <li class="navMenuLi">
+                                <a href="#">Resume</a>
+                            </li>
+                            <li class="navMenuLi">
+                                <a href="#">Skills</a>
+                            </li>
+                            <li class="navMenuLi">
+                                <a href="#">Testimonial</a>
+                            </li>
+                            <li class="navMenuLi">
+                                <a href="#">Contact</a>
+                            </li>
+                        </ul>
+                    </div>
+                    <div class="navButton">
+                        <a href="#">Hire Me</a>
+                    </div>
+                </div>
+            </nav>
+
+            <div class="nameImageDiv">
+                <div class="nameDetails">
+                    <div class="topName">
+                        <h3>I am Arafat</h3>
+                    </div>
+                    <div class="topWork">
+                        <h1>Web Developer + UX Designer</h1>
+                    </div>
+                    <div class="bottomDescription">
+                        <p>
+                            I specialize in crafting user experiences that
+                            prioritize both usability and integrity, fostering
+                            trust at scale.
+                        </p>
+                    </div>
+                    <div class="heroSecButton">
+                        <div class="cvButton">
+                            <a href="#"
+                                >Download CV <i class="lni lni-download"></i>
+                            </a>
+                        </div>
+
+                        <div class="iconButton">
+                            <div class="heroIcon">
+                                <a href="#">
+                                    <i class="lni lni-facebook-fill"></i>
+                                </a>
+                            </div>
+                            <div class="heroIcon">
+                                <a href="#">
+                                    <i class="lni lni-linkedin"></i>
+                                </a>
+                            </div>
+                            <div class="heroIcon">
+                                <a href="#">
+                                    <i class="lni lni-dribbble"></i>
+                                </a>
+                            </div>
+                            <div class="heroIcon">
+                                <a href="#">
+                                    <i class="lni lni-github-original"></i>
+                                </a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="myImage">
+                    <div class="myImageCon">
+                        <img src="images/avatar.jpg" alt="" />
+                    </div>
+                </div>
+            </div>
+
+            <div class="heroExperiences">
+                <div class="experience">
+                    <div class="expNumber">
+                        <h2 id="exp1">00</h2>
+                    </div>
+                    <div class="expName">
+                        <p>Years of Experience</p>
+                    </div>
+                </div>
+                <div class="experience">
+                    <div class="expNumber">
+                        <h2><span id="exp2">00</span>+</h2>
+                    </div>
+                    <div class="expName">
+                        <p>Years of Experience</p>
+                    </div>
+                </div>
+                <div class="experience">
+                    <div class="expNumber">
+                        <h2><span id="exp3">00</span>K</h2>
+                    </div>
+                    <div class="expName">
+                        <p>Happy Clients</p>
+                    </div>
+                </div>
+                <div class="experience">
+                    <div class="expNumber">
+                        <h2><span id="exp4">00</span>K</h2>
+                    </div>
+                    <div class="expName">
+                        <p>Happy Clients</p>
+                    </div>
+                </div>
+            </div>
+
+            <div class="heroBack">
+                <p>hello</p>
+                <p>world</p>
+            </div>
+        </section>
+
+        <!-- HERO SECTION END -->
+
+        <script
+            src="https://code.jquery.com/jquery-3.7.1.min.js"
+            integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo="
+            crossorigin="anonymous"
+        ></script>
+        <script
+            src="https://cdnjs.cloudflare.com/ajax/libs/odometer.js/0.4.7/odometer.min.js"
+            integrity="sha512-v3fZyWIk7kh9yGNQZf1SnSjIxjAKsYbg6UQ+B+QxAZqJQLrN3jMjrdNwcxV6tis6S0s1xyVDZrDz9UoRLfRpWw=="
+            crossorigin="anonymous"
+            referrerpolicy="no-referrer"
+        ></script>
+        <script src="main.js"></script>
+    </body>
 </html>
