finally solved the animation issues

--- a/index.html
+++ b/index.html
@@ -3,8 +3,9 @@
     <head>
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title>Portfolio</title>
+        <title>Portfolio | Arafat</title>
 
+        <link rel="shortcut icon" href="images/logo.png" type="image/x-icon" />
         <link
             rel="stylesheet"
             href="https://cdnjs.cloudflare.com/ajax/libs/odometer.js/0.4.7/themes/odometer-theme-minimal.min.css"
@@ -20,7 +21,6 @@
     </head>
     <body>
         <!-- HERO SECTION START -->
-
         <section id="hero">
             <nav class="topNav">
                 <!-- nav attatched to hero -->
@@ -120,7 +120,7 @@
             <div class="heroExperiences">
                 <div class="experience">
                     <div class="expNumber">
-                        <h2 id="exp1">00</h2>
+                        <h2 class="odometer" id="exp1">00</h2>
                     </div>
                     <div class="expName">
                         <p>Years of Experience</p>
@@ -128,15 +128,15 @@
                 </div>
                 <div class="experience">
                     <div class="expNumber">
-                        <h2><span id="exp2">00</span>+</h2>
+                        <h2><span class="odometer" id="exp2">00</span>+</h2>
                     </div>
                     <div class="expName">
-                        <p>Years of Experience</p>
+                        <p>Project Completed</p>
                     </div>
                 </div>
                 <div class="experience">
                     <div class="expNumber">
-                        <h2><span id="exp3">00</span>K</h2>
+                        <h2><span class="odometer" id="exp3">00</span>K</h2>
                     </div>
                     <div class="expName">
                         <p>Happy Clients</p>
@@ -144,7 +144,7 @@
                 </div>
                 <div class="experience">
                     <div class="expNumber">
-                        <h2><span id="exp4">00</span>K</h2>
+                        <h2><span class="odometer" id="exp4">00</span>K</h2>
                     </div>
                     <div class="expName">
                         <p>Happy Clients</p>
@@ -157,8 +157,96 @@
                 <p>world</p>
             </div>
         </section>
-
         <!-- HERO SECTION END -->
+
+        <!-- SERVICES SECTION START -->
+        <section id="services">
+            <div class="sectionTopHeading">
+                <h1>My Quality Services</h1>
+                <p>
+                    We put your ideas and thus your wishes in the form of a
+                    unique web project that inspires you and you customers.
+                </p>
+            </div>
+
+            <div class="allServices">
+                <div class="serviceCard activeServiceCard">
+                    <div class="serviceNo">
+                        <h2>01</h2>
+                    </div>
+                    <div class="serviceName">
+                        <h1>Branding Design</h1>
+                    </div>
+                    <div class="serviceInfo">
+                        <p>
+                            I specialize in crafting user experiences that
+                            prioritize both usability and integrity, fostering
+                            trust at scale.
+                        </p>
+                    </div>
+                    <div class="serviceLink">
+                        <a href="#"><i class="lni lni-arrow-top-right"></i></a>
+                    </div>
+                </div>
+                <div class="serviceCard">
+                    <div class="serviceNo">
+                        <h2>02</h2>
+                    </div>
+                    <div class="serviceName">
+                        <h1>UI/UX Design</h1>
+                    </div>
+                    <div class="serviceInfo">
+                        <p>
+                            I specialize in crafting user experiences that
+                            prioritize both usability and integrity, fostering
+                            trust at scale.
+                        </p>
+                    </div>
+                    <div class="serviceLink">
+                        <a href="#"><i class="lni lni-arrow-top-right"></i></a>
+                    </div>
+                </div>
+                <div class="serviceCard">
+                    <div class="serviceNo">
+                        <h2>03</h2>
+                    </div>
+                    <div class="serviceName">
+                        <h1>Web Desing & Dev</h1>
+                    </div>
+                    <div class="serviceInfo">
+                        <p>
+                            I specialize in crafting user experiences that
+                            prioritize both usability and integrity, fostering
+                            trust at scale.
+                        </p>
+                    </div>
+                    <div class="serviceLink">
+                        <a href="#"><i class="lni lni-arrow-top-right"></i></a>
+                    </div>
+                </div>
+                <div class="serviceCard">
+                    <div class="serviceNo">
+                        <h2>04</h2>
+                    </div>
+                    <div class="serviceName">
+                        <h1>App Design & Dev</h1>
+                    </div>
+                    <div class="serviceInfo">
+                        <p>
+                            I specialize in crafting user experiences that
+                            prioritize both usability and integrity, fostering
+                            trust at scale.
+                        </p>
+                    </div>
+                    <div class="serviceLink">
+                        <a href="#"><i class="lni lni-arrow-top-right"></i></a>
+                    </div>
+                </div>
+
+                <div class="allServicesBack"></div>
+            </div>
+        </section>
+        <!-- SERVICES SECTION END -->
 
         <script
             src="https://code.jquery.com/jquery-3.7.1.min.js"
