--- a/index.html
+++ b/index.html
@@ -248,6 +248,63 @@
         </section>
         <!-- SERVICES SECTION END -->
 
+        <!-- WORKS SECTION STARTS -->
+        <section id="works">
+            <div class="sectionTopHeading">
+                <h1>My Recent Works</h1>
+                <div class="catagoryContainer">
+                    <ul>
+                        <li class="catagory activeCatagory" data-filter="all">
+                            All
+                        </li>
+                        <li class="catagory" data-filter="web">Web</li>
+                        <li class="catagory" data-filter="app">App</li>
+                        <li class="catagory" data-filter="design">Design</li>
+                    </ul>
+                </div>
+            </div>
+
+            <div class="workList">
+                <div class="work">
+                    <div class="coverImgCon">
+                        <img src="images/avatar.jpg" alt="" />
+                    </div>
+                    <a href="#">
+                        <div class="workInfo">
+                            <div class="workInfoText">
+                                <h2>MAT-23 Student List</h2>
+                                <p>
+                                    Project using Node, Express, EJS and MongoDB
+                                </p>
+                            </div>
+                            <div class="workInfoIcon">
+                                <i class="lni lni-arrow-top-right"></i>
+                            </div>
+                        </div>
+                    </a>
+                </div>
+                <div class="work">
+                    <div class="coverImgCon">
+                        <img src="images/avatar.jpg" alt="" />
+                    </div>
+                    <a href="#">
+                        <div class="workInfo">
+                            <div class="workInfoText">
+                                <h2>MAT-23 Student List</h2>
+                                <p>
+                                    Project using Node, Express, EJS and MongoDB
+                                </p>
+                            </div>
+                            <div class="workInfoIcon">
+                                <i class="lni lni-arrow-top-right"></i>
+                            </div>
+                        </div>
+                    </a>
+                </div>
+            </div>
+        </section>
+        <!-- WORKS SECTION ENDS -->
+
         <script
             src="https://code.jquery.com/jquery-3.7.1.min.js"
             integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo="
