--- a/index.html
+++ b/index.html
@@ -265,7 +265,7 @@
             </div>
 
             <div class="workList">
-                <div class="work">
+                <div class="work web">
                     <div class="coverImgCon">
                         <img src="images/avatar.jpg" alt="" />
                     </div>
@@ -283,7 +283,43 @@
                         </div>
                     </a>
                 </div>
-                <div class="work">
+                <div class="work app">
+                    <div class="coverImgCon">
+                        <img src="images/avatar.jpg" alt="" />
+                    </div>
+                    <a href="#">
+                        <div class="workInfo">
+                            <div class="workInfoText">
+                                <h2>MAT-23 Student List</h2>
+                                <p>
+                                    Project using Node, Express, EJS and MongoDB
+                                </p>
+                            </div>
+                            <div class="workInfoIcon">
+                                <i class="lni lni-arrow-top-right"></i>
+                            </div>
+                        </div>
+                    </a>
+                </div>
+                <div class="work design">
+                    <div class="coverImgCon">
+                        <img src="images/avatar.jpg" alt="" />
+                    </div>
+                    <a href="#">
+                        <div class="workInfo">
+                            <div class="workInfoText">
+                                <h2>MAT-23 Student List</h2>
+                                <p>
+                                    Project using Node, Express, EJS and MongoDB
+                                </p>
+                            </div>
+                            <div class="workInfoIcon">
+                                <i class="lni lni-arrow-top-right"></i>
+                            </div>
+                        </div>
+                    </a>
+                </div>
+                <div class="work web">
                     <div class="coverImgCon">
                         <img src="images/avatar.jpg" alt="" />
                     </div>
