fixing little issues on scrolling

--- a/index.html
+++ b/index.html
@@ -39,22 +39,22 @@
                     <div class="navMenu">
                         <ul>
                             <li class="navMenuLi">
-                                <a href="#">Services</a>
+                                <a href="#services">Services</a>
                             </li>
                             <li class="navMenuLi">
-                                <a href="#">Works</a>
+                                <a href="#works">Works</a>
                             </li>
                             <li class="navMenuLi">
-                                <a href="#">Resume</a>
+                                <a href="#resume">Resume</a>
                             </li>
                             <li class="navMenuLi">
-                                <a href="#">Skills</a>
+                                <a href="#skills">Skills</a>
                             </li>
                             <li class="navMenuLi">
-                                <a href="#">Testimonial</a>
+                                <a href="#testimonial">Testimonial</a>
                             </li>
                             <li class="navMenuLi">
-                                <a href="#">Contact</a>
+                                <a href="#contact">Contact</a>
                             </li>
                         </ul>
                     </div>
