updating skill section

--- a/index.html
+++ b/index.html
@@ -20,7 +20,6 @@
         <link rel="stylesheet" href="style.css" />
     </head>
     <body>
-        <!-- HERO SECTION START -->
         <section id="hero">
             <nav class="topNav">
                 <!-- nav attatched to hero -->
@@ -157,9 +156,7 @@
                 <p>world</p>
             </div>
         </section>
-        <!-- HERO SECTION END -->
 
-        <!-- SERVICES SECTION START -->
         <section id="services">
             <div class="sectionTopHeading">
                 <h1>My Quality Services</h1>
@@ -246,9 +243,7 @@
                 <div class="allServicesBack"></div>
             </div>
         </section>
-        <!-- SERVICES SECTION END -->
 
-        <!-- WORKS SECTION STARTS -->
         <section id="works">
             <div class="sectionTopHeading">
                 <h1>My Recent Works</h1>
@@ -339,7 +334,146 @@
                 </div>
             </div>
         </section>
-        <!-- WORKS SECTION ENDS -->
+
+        <section id="resume">
+            <div class="experienceSection">
+                <div class="expTopHead">
+                    <div class="expTopHeadIcon">
+                        <i class="lni lni-certificate"></i>
+                    </div>
+                    <div class="expTopHeadTitle">
+                        <h1>My Experience</h1>
+                    </div>
+                </div>
+                <div class="expTiles">
+                    <div class="singleTile">
+                        <h3>2022 - Present</h3>
+                        <h2>LEAD DEVELOPER</h2>
+                        <p>Blockdots, London</p>
+                    </div>
+                    <div class="singleTile">
+                        <h3>2022 - Present</h3>
+                        <h2>LEAD DEVELOPER</h2>
+                        <p>Blockdots, London</p>
+                    </div>
+                    <div class="singleTile">
+                        <h3>2022 - Present</h3>
+                        <h2>LEAD DEVELOPER</h2>
+                        <p>Blockdots, London</p>
+                    </div>
+                    <div class="singleTile">
+                        <h3>2022 - Present</h3>
+                        <h2>LEAD DEVELOPER</h2>
+                        <p>Blockdots, London</p>
+                    </div>
+                </div>
+            </div>
+            <div class="educationSection">
+                <div class="expTopHead">
+                    <div class="expTopHeadIcon">
+                        <i class="lni lni-graduation"></i>
+                    </div>
+                    <div class="expTopHeadTitle">
+                        <h1>My Experience</h1>
+                    </div>
+                </div>
+                <div class="expTiles">
+                    <div class="singleTile">
+                        <h3>2022 - Present</h3>
+                        <h2>LEAD DEVELOPER</h2>
+                        <p>Blockdots, London</p>
+                    </div>
+                    <div class="singleTile">
+                        <h3>2022 - Present</h3>
+                        <h2>LEAD DEVELOPER</h2>
+                        <p>Blockdots, London</p>
+                    </div>
+                    <div class="singleTile">
+                        <h3>2022 - Present</h3>
+                        <h2>LEAD DEVELOPER</h2>
+                        <p>Blockdots, London</p>
+                    </div>
+                    <div class="singleTile">
+                        <h3>2022 - Present</h3>
+                        <h2>LEAD DEVELOPER</h2>
+                        <p>Blockdots, London</p>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <section id="skills">
+            <div class="sectionTopHeading">
+                <h1>My Skills</h1>
+                <p>
+                    We put your ideas and thus your wishes in the form of a
+                    unique web project that inspires you and you customers.
+                </p>
+            </div>
+
+            <div class="skillCards">
+                <div class="skillSingleCard">
+                    <div class="imgCon">
+                        <img src="images/skills/html.png" alt="" />
+                    </div>
+                    <h3>HTML5</h3>
+                </div>
+                <div class="skillSingleCard">
+                    <div class="imgCon">
+                        <img src="images/skills/css-3.png" alt="" />
+                    </div>
+                    <h3>CSS3</h3>
+                </div>
+                <div class="skillSingleCard">
+                    <div class="imgCon">
+                        <img src="images/skills/javascript.png" alt="" />
+                    </div>
+                    <h3>JavaScript</h3>
+                </div>
+                <div class="skillSingleCard">
+                    <div class="imgCon">
+                        <img src="images/skills/nodejs.png" alt="" />
+                    </div>
+                    <h3>NodeJS</h3>
+                </div>
+                <div class="skillSingleCard">
+                    <div class="imgCon">
+                        <img src="images/skills/physics.png" alt="" />
+                    </div>
+                    <h3>ReactJS</h3>
+                </div>
+                <div class="skillSingleCard">
+                    <div class="imgCon">
+                        <img src="images/skills/figma.png" alt="" />
+                    </div>
+                    <h3>Figma</h3>
+                </div>
+                <div class="skillSingleCard">
+                    <div class="imgCon">
+                        <img src="images/skills/photoshop.png" alt="" />
+                    </div>
+                    <h3>Photoshop</h3>
+                </div>
+                <div class="skillSingleCard">
+                    <div class="imgCon">
+                        <img src="images/skills/illustrator.png" alt="" />
+                    </div>
+                    <h3>Illustrator</h3>
+                </div>
+                <div class="skillSingleCard">
+                    <div class="imgCon">
+                        <img src="images/skills/wordpress.png" alt="" />
+                    </div>
+                    <h3>Wordpress</h3>
+                </div>
+                <div class="skillSingleCard">
+                    <div class="imgCon">
+                        <img src="images/skills/office.png" alt="" />
+                    </div>
+                    <h3>Office</h3>
+                </div>
+            </div>
+        </section>
 
         <script
             src="https://code.jquery.com/jquery-3.7.1.min.js"
